--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -20,6 +20,11 @@
                          class="form-control input-lg"
                          placeholder="Enter a to-do item"/>
                   {% csrf_token %}
+                  {% if error %}
+                    <div class="form-gorup has-error">
+                        <span class="help-block">{{ error }}</span>
+                    </div>
+                  {% endif %}
                 </form>
                 </div> <!-- text-center -->
             </div> <!-- col-md-6 col-m-offset-3-->
