--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -36,5 +36,12 @@
           </div> <!-- row-->
         
         </div> <!-- container -->
+
+        <script src="/static/jquery-3.3.1.js"></script>
+        <script src="/static/list.js"></script>
+   
+        <script>
+            initialize();
+        </script>
     </body>
 </html>
