--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -11,29 +11,41 @@
 
     <body>
         <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3 jumbotron">
-              <div class="text-center">
-                <h1>{% block header_text %}{% endblock %}</h1>
-                <form method="POST" action="{% block form_action %}{% endblock %}">
-                  {{ form.text }}
-                  {% csrf_token %}
-                  {% if form.errors %}
-                    <div class="form-gorup has-error">
-                        <div class="help-block">{{ form.text.errors }}</div>
-                    </div>
-                  {% endif %}
-                </form>
-                </div> <!-- text-center -->
-            </div> <!-- col-md-6 col-m-offset-3-->
-          </div> <!-- row-->
 
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              {% block table %}
-              {% endblock %}
-            </div> <!-- col-md-6 col-m-offset-3-->
-          </div> <!-- row-->
+            <nav clas="navbar navbar-default" role="navigation">    
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/">Superlists</a>
+                    <form class="navbar-form navbar-right" method="POST" action="#">
+                        <span>Enter email to log in:</span>
+                        <input class="form-control" name="email" type="text"/>
+                        {% csrf_token %}
+                    </form>
+                </div> <!-- .container-fluid -->
+            </nav>
+            
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 jumbotron">
+                <div class="text-center">
+                    <h1>{% block header_text %}{% endblock %}</h1>
+                        <form method="POST" action="{% block form_action %}{% endblock %}">
+                            {{ form.text }}
+                            {% csrf_token %}
+                            {% if form.errors %}
+                            <div class="form-gorup has-error">
+                                <div class="help-block">{{ form.text.errors }}</div>
+                            </div>
+                            {% endif %}
+                        </form>
+                    </div> <!-- text-center -->
+                </div> <!-- col-md-6 col-m-offset-3-->
+            </div> <!-- row-->
+
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    {% block table %}
+                    {% endblock %}
+                </div> <!-- col-md-6 col-m-offset-3-->
+            </div> <!-- row-->
         
         </div> <!-- container -->
 
